--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta charset="utf-8" />
-    <link rel="stylesheet" href="globals.css" />
     <link rel="stylesheet" href="style.css" />
     <title>Timetable App</title>
   </head>
@@ -20,7 +19,7 @@
           <div class="div">Current class</div>
           <div class="text-wrapper-2" id="room">337</div>
           <div class="text-wrapper-3" id="time">9:00-10:00</div>
-          <p class="next-class" id="next-class">next class --></p>
+          <p class="next-class" id="next-class">next class --&gt;</p>
 
         </div>
       </div>
